# test-Devin02-SND

./: .gitignore  README.md  db.sqlite3  main.py  manage.py  pyproject.toml  uv_django_demo.sh  uv_django_guide.py  uv_django_ja.md  uvenv.sh
main/: models.py  urls.py  views.py
main/migrations/: 0001_initial.py
main/templates/main/: base.html  home.html  polars_search_demo.html
main/utils/: __init__.py  polars_search.py
main/views/: __init__.py  polars_search.py
snd_project/: asgi.py  settings.py  wsgi.py
trash/: pyproject.toml  uv.toml
