[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snd_project"
version = "0.1.0"
description = "Devinの使い方を日本語で説明するためのDjangoウェブアプリケーション"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "django>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88
